# graphbit

./: .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .typos.toml  404.html  AZURE_EMBEDDING_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARATIVE_DIFFERENTIATION_ANALYSIS.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_GIL_FIXES_SUMMARY.md  Cargo.toml  EXECUTION_ROADMAP.md  EXECUTIVE_PRESENTATION.md  EXECUTIVE_SUMMARY_GIL_WORK.md  EXECUTIVE_SUMMARY_INFOGRAPHIC.md  FRAMEWORK_COMPARISON.md  FRAMEWORK_PERFORMANCE_COMPARISON_RESULTS.md  GIL_STATUS_BEFORE_AFTER_COMPARISON.md  GIL_STATUS_MATRIX.md  GRAPHBIT_RAG_SPECIFICATION.md  GRAPHBIT_VS_LANGCHAIN_RAG_COMPARISON.md  INSTALL.md  LICENSE-PLACEHOLDER  LICENSE.md  MAKEFILE_ARCHITECTURE.md  Makefile  OLLAMA_INTEGRATION_README.md  P2_COMPLETE_FINAL_RESULTS.md  P2_E2E_PIPELINE_TEST_RESULTS.md  P2_INTEGRATION_TESTING_STATUS.md  P2_PHASE4_STRESS_TEST_RESULTS.md  PARALLELRAG_GIL_STATUS_AND_ACTION_PLAN.md  PARALLELRAG_P2_PHASE4_FINAL_STATUS.md  PARALLELRAG_PRODUCTION_READY_FINAL_STATUS.md  PRODUCTION_ERROR_HANDLING.md  PRODUCTION_PERFORMANCE_MONITORING.md  PRODUCTION_RUNTIME_CONFIGURATION.md  (+54 more)
benchmarks/: .dockerignore  .gitignore  AI Framework Benchmark Comparison Report.md  Dockerfile  README.md  conftest.py  docker-compose.yml  extract_gaia_questions.py  extract_gaia_questions_public.py  gaia_selected_questions.json  pyproject.toml  pytest.ini  run_benchmark.py  update_prompts_with_gaia.py
benchmarks/Report/: Ai_LLM_Multi_Agent_Framework_Benchmark_Comparison_Report.md
benchmarks/frameworks/: __init__.py  ag2_benchmark.py  autogen_benchmark.py  common.py  common.py.backup_before_gaia  crewai_benchmark.py  graphbit_benchmark.py  langchain_benchmark.py  langgraph_benchmark.py  llamaindex_benchmark.py  pydantic_ai_benchmark.py
benchmarks/report/: framework-benchmark-report.md
benchmarks/tests/: test_ag2_benchmark.py
examples/chatbot/: .gitignore  README.md  pyproject.toml
examples/chatbot/backend/: chatbot_manager.py  const.py  llm_manager.py  main.py  vectordb_manager.py
examples/chatbot/docs/: description.html  preview-description.html  setup-instructions.html
examples/chatbot/frontend/: chatbot.py
examples/llm-guided-browser-automation-agent-graphbit-playwright/: graphbit_agent_planner.py  llm_graphbit_browser_agent.py  llm_guided_browser_automation_agent_graphbit_playwrigh.py  plan_executor.py  pyproject.toml
examples/research-paper-summarizer-agent/: README.md  pyproject.toml
examples/research-paper-summarizer-agent/backend/: const.py  faiss_store.py  llm_manager.py  main-server.py  main.py  paper_manager.py  summarizer.py
examples/research-paper-summarizer-agent/docs/: description.html  preview-description.html  setup-instructions.html
examples/research-paper-summarizer-agent/frontend/: app.py
javascript/: .eslintignore  .eslintrc.json  .gitignore  API_REFERENCE.md  CHANGELOG.md  COMPILATION_ERRORS_SUMMARY.md  Cargo.toml  DEVELOPER_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.5.1.md  graphbit.d.ts  graphbit.js  package-lock.json  package.json  test-bindings-validation.js  test-real-world-usage.js  test-strategy-b-validation.js  tsconfig.json  vitest.config.ts
javascript/.github/workflows/: ci.yml  js-ts-ci-manual.yml  release.yml
javascript/benchmarks/: performance-suite.ts
javascript/docs/: API.md  CONTRIBUTING.md  MAINTENANCE.md  MIGRATION.md  README.md  agent.md  core-functions.md  document-loader.md  embeddings.md  executor.md  llm-config.md  migration-from-python.md  text-splitter.md  tools.md  workflow.md
javascript/docs/examples/: README.md  error-handling.md  multi-agent-system.md  production-deployment.md  rag-pipeline.md
javascript/docs/reports/: api_completeness_audit.md  multiagent_live_test_report.md  phase_3_1_verification_report.md  phase_completion_audit.md  rag_live_test_report.md
javascript/examples/: README.md  basic-workflow.ts  core-functions-demo.ts  core_concepts.ts  document-loader-enhanced-demo.ts  document_loader.ts  embedding-similarity-demo.ts  embeddings.ts  llm-client-demo.ts  llm_providers.ts  quickstart.ts  test_installation.ts  text-processing.ts  text_splitter.ts  tool-registry-enhanced-demo.ts  workflow-context-demo.ts  workflow-result-demo.ts
javascript/examples/doc-tests/: debug-tool-result.ts  definitive-async-test.js  simple-test.ts  test-01-installation.ts  test-02-quick-start.ts  test-03-workflow-builder.ts  test-04-llm-providers.ts  test-05-agents.ts  test-06-tool-calling.ts  test-07-document-loader.ts  test-08-text-splitters.ts  test-09-embeddings.ts  test-10-api-reference.ts  test-api-validation.ts  test-concepts-agent-builder-api.ts  test-concepts-llm-providers.ts  test-concepts-workflow-builder-api.ts  test-corrected-pattern.ts  test-dynamics-workflow-patterns.ts  test-output.txt  test-readme-examples.ts  test-tool-calling-patterns.ts  test-tool-calling-workflow-integration.ts  test-tool-registry-comprehensive.ts  validate-api-structure.ts  validate-tool-calling-doc.js  verify-async-vs-sync-fixes.ts  verify-configuration-fixes.ts  verify-performance-fixes.ts
javascript/lib/: async-helpers.js
javascript/reports/: rag_live_test_report.md
javascript/scripts/: README.md  bump-version.js  comprehensive-integration-test.js  final-qa-validation.js  fix-imports.js  organize-npm.js  quick-integration-test.js  run-integration-tests.js  run-performance-benchmarks.js  verify-version.js  verify_methods.js  workflow-integration-test.js
javascript/scripts/live-tests/: test_multiagent_live.js  test_rag_live.js
javascript/scripts/verification/: docs_verify_agent.js  docs_verify_core.js  docs_verify_document_loader.js  docs_verify_embeddings.js  docs_verify_executor.js  docs_verify_llm_config.js  docs_verify_text_splitter.js  docs_verify_tools.js  docs_verify_workflow.js  test_multiagent_example.js  (+7 more)
javascript/src/: agent.rs  document_loader.rs  embeddings.rs  errors.rs  graph.rs  lib.rs  llm.rs  llm_client.rs  text_splitter.rs  tools.rs  types.rs  validation.rs  workflow.rs
(+765 files in other folders)
