[package]
name = "graphbit-js"
version = "0.5.1"
description = "JavaScript/Node.js bindings for GraphBit agentic workflow automation"
authors = ["GraphBit Team"]
edition = "2021"
license-file = "../LICENSE.md"
repository = "https://github.com/InfinitiBit/graphbit"
homepage = "https://graphbit.ai"
documentation = "https://docs.graphbit.ai"
keywords = ["ai", "automation", "workflow", "agent", "llm"]
categories = ["development-tools", "api-bindings", "asynchronous"]
rust-version = "1.70.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "graphbit_js"

[dependencies]
# Core GraphBit dependency
graphbit-core = { path = "../core" }

# napi-rs for Node.js bindings
napi = { version = "2.16", features = ["async", "tokio_rt", "napi8", "serde-json"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[build-dependencies]
napi-build = "=2.1.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true

# Enable vendored OpenSSL for cross-compilation
[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

