[project]
name = "chatbot"
version = "0.1.0"
description = "\"Chatbot using graphbit that stores conversation context in vectordb\""
authors = [
    {name = "Tanima"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.116.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "websockets (>=15.0.1,<16.0.0)"
]

[tool.poetry.scripts]
backend = "uvicorn backend.main:app --reload"
frontend = "streamlit run frontend/chatbot.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"