[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [
  {name = "GraphBit Team"}
]
dependencies = [
  "fastapi (==0.116.0)",
  "streamlit (>=1.46.1,<2.0.0)",
  "pydantic (>=2.11.7,<3.0.0)",
  "uvicorn[standard] (>=0.35.0,<0.36.0)",
  "python-dotenv (>=1.1.1,<2.0.0)",
  "requests (>=2.32.4,<3.0.0)",
  "faiss-cpu (>=1.11.0,<2.0.0)",
  "numpy (>=2.3.1,<3.0.0)",
  "python-multipart (>=0.0.20,<1.0.0)",
  "graphbit (>=0.5.0,<0.6.0)"
]
description = "Research Paper Summarizer Agent using GraphBit framework for PDF analysis and Q&A"
name = "research-paper-summarizer-agent"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.poetry]
package-mode = false
